--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
-    --cor-principal: #f8f7fe;
-    --cor--de-fundo:#4b4b4b;
+    --cor-principal: #000000d6;
+    --cor--de-fundo:#ffffff;
     --cor-de-link:#cd3737;
-    --cor-titulo-principal:#959393;
+    --cor-titulo-principal:#313131;
 }
 
 body{
@@ -17,14 +17,13 @@ body{
 }
 
 .titulo__principal{
-background-color: #161616;
 padding: 0.6em;
 text-align: center;
 
 
 }
 h1{
-    color: var(--cor-titulo-principal);
+    color: var(--cor-principal);
     font-size: 2.5em;
     
    
@@ -44,7 +43,14 @@ h1{
     color: var(--cor-principal);
     font-size: 22px;
 }
+.imagem{
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+        object-position: bottom;
+    
 
+}
 .link{
     color: var(--cor-de-link);
 }
