--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ h1{
 }
 .imagem{
         width: 100%;
-        height: 680px;
+        height: 40%;
         object-fit: cover;
         object-position: bottom;
     
